k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: contrib
  name: contrib
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: contrib
  type: ClusterIP
