k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: contrib
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: contrib
spec:
  rules:
  - host: contrib.gathering.org
    http:
      paths:
      - backend:
          serviceName: contrib
          servicePort: 80
        path: /
  tls:
  - hosts:
    - contrib.gathering.org
    secretName: contrib-go-tls
